# object-detection

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: codeql-analysis.yml
common/: config.ini  support.cpp
common/include/common/: support.h
objectdetect/: objectdetect.cpp
